[fix] header overlap and link to home

--- a/src/styles/components/header.menu.scss
+++ b/src/styles/components/header.menu.scss
@@ -39,8 +39,9 @@
     }
   }
   .menu-items {
-    position: absolute;
-    top: 60px;
+    z-index: 10;
+    position: fixed;
+    top: 80px;
     right: 0px;
     background-color: white;
     box-shadow: 0px 5px 10px #bababa;
